refa (Laerdal.targets): the iphone-simulator nugets now have the same base name as the iOS nuget (Laerdal.Dfu.Bindings.iOS) and differ only by a certain postfix to the package version
   with this new scheme on each build we generate 4 nugets like so:

     Laerdal.Dfu.Bindings.iOS           version: 1.2.3
     Laerdal.Dfu.Bindings.iOS           version: 1.2.3-ios-sim-x64    (for the legacy iphonesimulator-x86_64)
     Laerdal.Dfu.Bindings.iOS           version: 1.2.3-ios-sim-arm64  (for the new iphonesimulator-arm64)
     Laerdal.Dfu.Bindings.MacCatalyst   version: 1.2.3

[skip ci]

--- a/Laerdal.Dfu.Bindings.iOSSimulator.Arm64/Laerdal.Dfu.Bindings.iOSSimulator.Arm64.csproj
+++ b/Laerdal.Dfu.Bindings.iOSSimulator.Arm64/Laerdal.Dfu.Bindings.iOSSimulator.Arm64.csproj
@@ -1,8 +1,27 @@
+<!-- to future maintainers   if you are asking yourself:                                                                                                                                      -->
+<!-- to future maintainers                                                                                                                                                                    -->
+<!-- to future maintainers   "can't we just use the lipo cli to combine iphonesimulator-arm64 and iphoneos-arm64 into a single native binary and generate a single nuget instead of two?"     -->
+<!-- to future maintainers                                                                                                                                                                    -->
+<!-- to future maintainers   the answer is:                                                                                                                                                   -->
+<!-- to future maintainers                                                                                                                                                                    -->
+<!-- to future maintainers   lipo does not (at the time of this writing and probably in the future) support combining two arm64 binaries into one   this is why we need to have two separate  -->
+<!-- to future maintainers   nugets with that differ only in version: the iphonesimulator nuget is marked as prelease with the 'ios-sim-arm64' prefix!  both nugets get uploaded to the       -->
+<!-- to future maintainers   nuget server                                                                                                                                                     -->
+<!-- to future maintainers                                                                                                                                                                    -->
+<!-- to future maintainers            Laerdal.Dfu.Bindings.iOS     version: 1.2.3                                                                                                             -->
+<!-- to future maintainers            Laerdal.Dfu.Bindings.iOS     version: 1.2.3-ios-sim-x64                                                                                                 -->
+<!-- to future maintainers            Laerdal.Dfu.Bindings.iOS     version: 1.2.3-ios-sim-arm64                                                                                               -->
+<!-- to future maintainers                                                                                                                                                                    -->
+
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <ProjectRootPath>$(MSBuildThisFileDirectory)</ProjectRootPath>
 
-        <Laerdal_Package_Name>Laerdal.Dfu.Bindings.iOSSimulator.Arm64</Laerdal_Package_Name>
+        <Laerdal_Package_Tags>Simulators</Laerdal_Package_Tags>
+        <Laerdal_Package_Name>Laerdal.Dfu.Bindings.iOS</Laerdal_Package_Name>
+        
+        <!-- this is absolutely vital! -->
+        <Laerdal_Package_Version_Postfix>-ios-sim-arm64</Laerdal_Package_Version_Postfix>
     </PropertyGroup>
 
     <PropertyGroup>
